fix: Adjust headline spacing

--- a/email/src/email-body/_email-body.scss
+++ b/email/src/email-body/_email-body.scss
@@ -5,6 +5,21 @@ table.wrapper.dbx-email-body td.dbx-email-body-inner {
   padding-right: dbx-spacing('52');
 }
 
-table.wrapper.dbx-email-body a {
-  font-weight: bold;
+/**
+ * 1. for some reason, Outlook requires the margin property
+ *    to start with a capital 'M'
+ */
+table.wrapper.dbx-email-body {
+  a {
+    font-weight: bold;
+  }
+
+  h2, h3, h4, h5, h6 {
+    margin-top: dbx-spacing('24');
+    Margin-top: dbx-spacing('24'); /* 1 */
+
+    margin-bottom: dbx-spacing('8');
+    Margin-bottom: dbx-spacing('8'); /* 1 */
+  }
 }
+
